# veeks_millis_clock

./: Cargo.toml  Makefile.toml  README.md  lmakeversionfromdate.json
docs/: index.html  search-index.js  settings.html  source-files.js
docs/src/veeks_millis_clock/: lib.rs.html
docs/veeks_millis_clock/: all.html  fn.__wasm_bindgen_generated_wasm_bindgen_start.html  fn.debug_write.html  fn.get_element_by_id.html  fn.set_interval.html  fn.speak_the_time.html  fn.wasm_bindgen_start.html  fn.window.html  fn.write_time_to_screen.html  index.html  sidebar-items.js
src/: lib.rs
web_server_folder/veeks_millis_clock/: index.html  manifest.json  service_worker.js
